<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".LanguageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/choose_your_language"
        android:textSize="25dp"
        android:textStyle="bold">
    </TextView>

    <RadioGroup
        android:id="@+id/radioChoice"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/ruby"
            android:layout_marginTop="120dp"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_gravity="center"

            android:text="@string/ruby"
            android:textSize="20dp"
            />

        <RadioButton
            android:id="@+id/python"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_gravity="center"

            android:text="@string/python"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/php"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_gravity="center"

            android:text="@string/php"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/javascript"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_gravity="center"

            android:text="@string/javascript"
            android:textSize="20dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#3498db"
            android:paddingHorizontal="60dp"
            android:text="@string/confirm"
            app:icon="@android:drawable/ic_input_add" />
    </LinearLayout>


</LinearLayout>

